[package]
name = "paho-mqtt"
version = "0.7.0"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
homepage = "https://github.com/eclipse/paho.mqtt.rust"
repository = "https://github.com/eclipse/paho.mqtt.rust"
keywords = [ "MQTT", "IoT", "Paho", "messaging" ]
license = "EPL-1.0"
readme = "README.md"
description = """
The Official Eclipse Paho MQTT Rust Client Library.
This is a wrapper around the Paho C library.
"""

[dependencies]
paho-mqtt-sys = { version = "0.2", path = "paho-mqtt-sys", default-features=false }
libc = "0.2"
futures = "0.1"
futures-timer = "0.1"
log = "0.4"
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
env_logger = "0.7"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"

[features]
default = ["bundled", "ssl"]
bundled = ["paho-mqtt-sys/bundled"]
build_bindgen = ["paho-mqtt-sys/build_bindgen"]
ssl = ["paho-mqtt-sys/ssl"]
