[package]
name = "paho-mqtt"
version = "0.8.0"
edition = "2018"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
homepage = "https://github.com/eclipse/paho.mqtt.rust"
repository = "https://github.com/eclipse/paho.mqtt.rust"
keywords = [ "MQTT", "IoT", "Paho", "messaging" ]
license = "EPL-1.0"
readme = "README.md"
description = """
The Official Eclipse Paho MQTT Rust Client Library.
This is a wrapper around the Paho C library.
"""

[dependencies]
paho-mqtt-sys = { version = "0.4", path = "paho-mqtt-sys", default-features=false }
libc = "0.2"
#futures = "0.3"
futures = { version = "0.3", features = ["compat"] }
futures-timer = "0.3"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.7"
toml = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
futures-util = "0.3"
async-std = "1"
clap = "2.33"

[features]
default = ["bundled", "ssl"]
bundled = ["paho-mqtt-sys/bundled"]
build_bindgen = ["paho-mqtt-sys/build_bindgen"]
ssl = ["paho-mqtt-sys/ssl"]
