[package]
name = "paho-mqtt"
version = "0.12.2"
edition = "2021"
rust-version = "1.63"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
homepage = "https://github.com/eclipse/paho.mqtt.rust"
repository = "https://github.com/eclipse/paho.mqtt.rust"
keywords = [ "MQTT", "IoT", "Paho", "messaging" ]
license = "EPL-1.0"
readme = "README.md"
description = """
The Official Eclipse Paho MQTT Rust Client Library.
This is a wrapper around the Paho C library.
"""

[features]
default = ["bundled", "ssl"]
bundled = ["paho-mqtt-sys/bundled"]
build_bindgen = ["paho-mqtt-sys/build_bindgen"]
ssl = ["paho-mqtt-sys/ssl"]
vendored-ssl = ["paho-mqtt-sys/vendored-ssl"]

[dependencies]
paho-mqtt-sys = { version = "0.8.0", path = "paho-mqtt-sys", default-features=false }
libc = "0.2"
futures = "0.3"
futures-timer = "3.0"
async-channel = "1.6"
crossbeam-channel = "0.5"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.7"
toml = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
futures-util = "0.3"
async-std = "1"
clap = "2.34"
ctrlc = "3.2"

