[package]
name = "paho-mqtt-sys"
version = "0.7.0"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
homepage = "https://github.com/eclipse/paho.mqtt.rust"
repository = "https://github.com/eclipse/paho.mqtt.rust"
keywords = [ "MQTT", "IoT", "Paho", "messaging" ]
license = "EPL-1.0"
readme = "README.md"
package = "build.rs"
description = """
Low-level, unsafe Rust wrapper for the Paho MQTT C Client Library.
This is part of the official Eclipse Paho Rust Client Library.
"""

# The build features are:
#   "bundled" - Use/build the bundled Paho C library.
#   "build_bindgen" - Use 'bindgen' to regenerate the bindings to the C library.
#   "ssl" - Enable SSL features and link to the Paho C library that uses SSL.
#   "vendored-ssl" - Compile and statically link to a copy of OpenSSL.

[features]
default = ["bundled", "ssl"]
bundled = ["cmake"]
build_bindgen = ["bindgen"]
ssl = ["openssl-sys"]
vendored-ssl = ["bundled", "ssl", "openssl-sys/vendored"]

[dependencies]
openssl-sys = { version = "0.9", optional = true }

# Note, at the time of this release, the `cmake` crate v0.1.46 didn't work on
# all supported build machines due to the use of the '--parallel' flag which 
# was introduced in CMake v3.13, or so.
# For now, we keep fixed to cmake crate v0.1.45.

[build-dependencies]
bindgen = { version = "0.52", optional = true }
cmake = { version = "=0.1.48", optional = true }
