[package]
name = "paho-mqtt-sys"
version = "0.9.0"
edition = "2021"
rust-version = "1.63.0"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
homepage = "https://github.com/eclipse/paho.mqtt.rust"
repository = "https://github.com/eclipse/paho.mqtt.rust"
keywords = [ "MQTT", "IoT", "Paho", "messaging" ]
license = "EPL-2.0"
readme = "README.md"
package = "build.rs"
description = """
Low-level, unsafe Rust wrapper for the Paho MQTT C Client Library.
This is part of the official Eclipse Paho Rust Client Library.
"""

# The build features are:
#   "bundled" - Use/build the bundled Paho C library.
#   "build_bindgen" - Use 'bindgen' to regenerate the bindings to the C library.
#   "ssl" - Enable SSL features and link to the Paho C library that uses SSL.
#   "vendored-ssl" - Compile and statically link to a copy of OpenSSL.

[features]
default = ["bundled", "ssl"]
bundled = ["cmake"]
build_bindgen = ["bindgen"]
ssl = ["openssl-sys"]
vendored-ssl = ["bundled", "ssl", "openssl-sys/vendored"]

[dependencies]
openssl-sys = { version = "0.9", optional = true }

[build-dependencies]
bindgen = { version = "0.64", optional = true }
cmake = { version = "0.1.50", optional = true }
